automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<div class="wrapper">
 		  <h1> Zetsy </h1>
 		  <hr> 
+		  <img src = "images/"
 			
 			<!-- write HTML code neccesary here -->
 			
