--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="wrapper">
 		  <h1> Zetsy </h1>
 		  <hr> 
-		  <img src = "images/"
+		  <img src = "images/necklace.jpg"> 
 			
 			<!-- write HTML code neccesary here -->
 			
