--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         American Southwest drilled and shaped multicolored stones and shells into beads and pendants. Olivella shell  
         beads, dating from 6000 BCE, were found in Nevada; bone, antler, and possibly marine shell beads from 7000 BCE
         were found in Russell Cave in Alabama; copper jewelry was traded from Lake Superior beginning in 3000 BCE; and
-        stone beads were carved in Poverty Point in Louisiana in 1500 BCE. Learn more.
+        stone beads were carved in Poverty Point in Louisiana in 1500 BCE. 
+        <a href = "https://en.wikipedia.org/wiki/Native_American_jewelry"> Learn More. </a>
        </p>  
         
         <p>
