--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         beads, dating from 6000 BCE, were found in Nevada; bone, antler, and possibly marine shell beads from 7000 BCE
         were found in Russell Cave in Alabama; copper jewelry was traded from Lake Superior beginning in 3000 BCE; and
         stone beads were carved in Poverty Point in Louisiana in 1500 BCE. 
-        <a href = "https://en.wikipedia.org/wiki/Native_American_jewelry"> Learn More. </a>
+        <a href = "https://en.wikipedia.org/wiki/Native_American_jewelry" target = "_blank"> Learn More. </a>
        </p>  
         
         <p>
