automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         </p>
         
     <h2> Press </h2>
-    <img src = ""
+    <img src = "images/nmai-logo.png"> 
+    <img src = "images/times-logo.png">
+    <img src = "sedona-logo.png"> 
+    <img src = "bergdorf-logo.png"> 
 		  
-			
 			
 			
 
