automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
     <h2> Press </h2>
     <img src = "images/nmai-logo.png"> 
     <img src = "images/times-logo.png">
-    <img src = "sedona-logo.png"> 
-    <img src = "bergdorf-logo.png"> 
+    <img src = "images/sedona-logo.png"> 
+    <img src = "images/bergdorf-logo.png"> 
 		  
+			[nmai-logo.png]<!-- links to: http://nmai.si.edu -->
+[times-logo.png]<!-- links to: http://www.nytimes.com/pages/t-magazine/ -->
+[sedona-logo.png]<!-- links to: http://www.sedonamonthly.com -->
+[bergdorf-logo.png]<!-- links to: http://www.bergdorfgoodman.com/ -->
 			
 			
 
