automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <img src = "images/sedona-logo.png"> 
     <img src = "images/bergdorf-logo.png"> 
 		  
-			[nmai-logo.png]<!-- links to: http://nmai.si.edu -->
-[times-logo.png]<!-- links to: http://www.nytimes.com/pages/t-magazine/ -->
-[sedona-logo.png]<!-- links to: http://www.sedonamonthly.com -->
-[bergdorf-logo.png]<!-- links to: http://www.bergdorfgoodman.com/ -->
+<!--			[nmai-logo.png]<!-- links to: http://nmai.si.edu -->-->
+<!--[times-logo.png]<!-- links to: http://www.nytimes.com/pages/t-magazine/ -->-->
+<!--[sedona-logo.png]<!-- links to: http://www.sedonamonthly.com -->-->
+<!--[bergdorf-logo.png]<!-- links to: http://www.bergdorfgoodman.com/ -->-->
 			
 			
 
