automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         </p>
         
     <h2> Press </h2>
-    <a href = "http://nmai.si.edu"></a><img src = "images/nmai-logo.png"> 
-    <img src = "images/times-logo.png">
+    <a href = "http://nmai.si.edu"><img src = "images/nmai-logo.png"></a>
+    <a href = "http://www.nytimes.com/pages/t-magazine/"></a><img src = "images/times-logo.png"></a> 
     <img src = "images/sedona-logo.png"> 
     <img src = "images/bergdorf-logo.png"> 
 		  
