--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
         
     <h2> Press </h2>
     <a href = "http://nmai.si.edu"><img src = "images/nmai-logo.png"></a>
-    <a href = "http://www.nytimes.com/pages/t-magazine/"></a><img src = "images/times-logo.png"></a> 
-    <img src = "images/sedona-logo.png"> 
-    <img src = "images/bergdorf-logo.png"> 
+    <a href = "http://www.nytimes.com/pages/t-magazine/"><img src = "images/times-logo.png"></a> 
+    <a href = "http://www.nytimes.com/pages/t-magazine/"><img src = "images/sedona-logo.png"></a>
+    <a href = "http://www.nytimes.com/pages/t-magazine/"><img src = "images/bergdorf-logo.png"></a> 
 		  
 
-<!--[times-logo.png]<!-- links to: http://www.nytimes.com/pages/t-magazine/ -->
-<!--[sedona-logo.png]<!-- links to: http://www.sedonamonthly.com -->
-<!--[bergdorf-logo.png]<!-- links to: http://www.bergdorfgoodman.com/ -->
 			
 			
 
