--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <a href = "http://www.sedonamonthly.com"><img src = "images/sedona-logo.png"></a>
     <a href = "http://www.bergdorfgoodman.com/"><img src = "images/bergdorf-logo.png"></a> 
 		  
-			
+		<footer> </footer>
 
 		</div><!-- .wrapper -->
 	</body>
